# auth-service

./: pyproject.toml  users.json
app/: main.py
auth/: main.py  models.py
